--- a/index.html
+++ b/index.html
@@ -1983,6 +1983,15 @@
           );
 
           if (!response.ok) {
+            if (response.status === 401) {
+              debugLog('Session expired (401). Clearing auth and reloading.');
+              localStorage.removeItem('strava_access_token');
+              localStorage.removeItem('strava_refresh_token');
+              localStorage.removeItem('strava_athlete');
+              alert('Your session has expired. Please log in again.');
+              window.location.reload();
+              return;
+            }
             const errorText = await response.text();
             debugLog(`Fetch failed: ${response.status} ${errorText}`);
             alert(`Debug: Fetch failed. Status: ${response.status}, Body: ${errorText}`);
