update error 403 page
change to "hit the wall"

--- a/index.html
+++ b/index.html
@@ -1388,7 +1388,7 @@
 
   <!-- Error Screen -->
   <div class="error-screen hidden" id="errorScreen">
-    <div class="error-title">Limit Reached</div>
+    <div class="error-title">Hit the Wall</div>
     <p class="error-message">
       We're waiting to expand our API access to support as many athletes as we can.
     </p>
